Adicionado captura de erros e exceções