@@ -5,12 +5,15 @@ import com.br.projetoyaskara.model.Endereco;
 import com.br.projetoyaskara.model.Organizacao;
 import com.br.projetoyaskara.repository.EnderecoRepository;
 import com.br.projetoyaskara.repository.OrganizacaoRepository;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static com.br.projetoyaskara.util.Utils.atualizarEndereco;
 
@@ -25,21 +28,34 @@ public class OrganizacaoService {
         this.enderecoRepository = enderecoRepository;
     }
 
-    public ResponseEntity<Object> registrarOrganizacao(Organizacao organizacao) {
-        if (organizacao.getEndereco() != null) {
-            Endereco enderecoSalvo = enderecoRepository.save(organizacao.getEndereco());
-            organizacao.setEndereco(enderecoSalvo);
+    public ResponseEntity<?> registrarOrganizacao(Organizacao organizacao) {
+        try {
+            if (organizacao.getEndereco() != null) {
+                Endereco enderecoSalvo = enderecoRepository.save(organizacao.getEndereco());
+                organizacao.setEndereco(enderecoSalvo);
+            }
+            Organizacao salva = organizacaoRepository.save(organizacao);
+            return ResponseEntity.ok(toDTO(salva));
+        } catch (DataIntegrityViolationException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body("Dados inválidos ou faltando: " + Objects.requireNonNull(e.getRootCause()).getMessage());
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("Erro inesperado ao criar a organização: " + e.getMessage());
         }
-        Organizacao salva = organizacaoRepository.save(organizacao);
-        return ResponseEntity.ok(toDTO(salva));
     }
 
-    public ResponseEntity<Object> updateOrganizacao(Organizacao organizacao) {
+    public ResponseEntity<?> updateOrganizacao(Organizacao organizacao) {
         Organizacao updatedOrganizacao = organizacaoRepository.findOrganizacaoById(organizacao.getId());
 
         if (updatedOrganizacao == null) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body("Organização não encontrada no banco de dados. Verifique o ID.");
+        }
+
+        if (updatedOrganizacao.getEndereco() == null) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body("Organização não possui endereço cadastrado.");
         }
 
         Endereco enderecoSalvo = enderecoRepository.findEnderecoById(updatedOrganizacao.getEndereco().getId());
@@ -49,10 +65,8 @@ public class OrganizacaoService {
                     .body("Endereço associado à organização não encontrado.");
         }
 
-
         atualizarEndereco(enderecoSalvo, organizacao.getEndereco());
         enderecoRepository.save(enderecoSalvo);
-
 
         updatedOrganizacao.setName(organizacao.getName());
         updatedOrganizacao.setCnpj(organizacao.getCnpj());
@@ -62,15 +76,15 @@ public class OrganizacaoService {
         return ResponseEntity.ok(toDTO(updatedOrganizacao));
     }
 
-    public ResponseEntity<List<OrganizacaoDTO>> getAllOrganizacoes() {
+    public ResponseEntity<?> getAllOrganizacoes() {
         List<Organizacao> organizacoes = organizacaoRepository.findAll();
         List<OrganizacaoDTO> dtos = organizacoes.stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(dtos);
     }
 
-    public ResponseEntity<Object> getOrganizacaoById(UUID id) {
+    public ResponseEntity<?> getOrganizacaoById(UUID id) {
         Organizacao organizacao = organizacaoRepository.findOrganizacaoById(id);
         if (organizacao == null) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
@@ -79,15 +93,15 @@ public class OrganizacaoService {
         return ResponseEntity.ok(toDTO(organizacao));
     }
 
-    public ResponseEntity<List<OrganizacaoDTO>> getOrganizacaoByName(String name) {
+    public ResponseEntity<?> getOrganizacaoByName(String name) {
         List<Organizacao> organizacoes = organizacaoRepository.findAllByNameContaining(name);
         List<OrganizacaoDTO> dtos = organizacoes.stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(dtos);
     }
 
-    public ResponseEntity<Object> cadastrarEndereco(UUID idOrganizacao, Endereco endereco) {
+    public ResponseEntity<?> cadastrarEndereco(UUID idOrganizacao, Endereco endereco) {
         Organizacao organizacao = organizacaoRepository.findOrganizacaoById(idOrganizacao);
 
         if (organizacao == null) {
@@ -106,7 +120,6 @@ public class OrganizacaoService {
 
         return ResponseEntity.ok(toDTO(organizacao));
     }
-
 
     private OrganizacaoDTO toDTO(Organizacao organizacao) {
         return new OrganizacaoDTO(organizacao);
